--- a/Clash-Fullv.ini
+++ b/Clash-Fullv.ini
@@ -22,9 +22,8 @@ ruleset=📺 Disney,https://raw.githubusercontent.com/blackmatrix7/ios_rule_scri
 ruleset=🎥 Netflix,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Netflix/Netflix.list
 ruleset=🎬 HBO MAX,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/HBO/HBO.list
 ruleset=🎵 Spotify,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Clash/Spotify/Spotify.list
-ruleset=🌍 国外,https://raw.githubusercontent.com/tangodj-leesc/rule/refs/heads/main/Proxy.list
-ruleset=🌍 国外,https://raw.githubusercontent.com/tangodj-leesc/rule/refs/heads/main/Global.list
-ruleset=➡️ 国内,[]FINAL
+ruleset=🌍 国内,https://raw.githubusercontent.com/tangodj-leesc/rule/refs/heads/main/China.list
+ruleset=➡️ 国外,[]FINAL
 
 ;2、策略组（域名组-节点组）
 custom_proxy_group=✨ AI1`select`[]DIRECT`[]所有-手动`[]所有-自动`[]港台日新韩-自动`[]台日新韩-自动`[]香港-自动`[]台湾-自动`[]日本-自动`[]新加坡-自动`[]韩国-自动`[]美国-自动`[]其他-自动`[]REJECT
